--- a/home.css
+++ b/home.css
@@ -33,12 +33,27 @@ body {
         background-color: var(--color1);
     } */
     #headlogo {
+        border: 3px solid black;
+        background-color: black;
         display: flex;
+        border-radius: 8px;
+        width: 150px;
         justify-content: flex-end;
+        margin-left: 223px;
+        padding: 0;
+        /* /* height: 50px; */
+    }
+
+    #headlogo p {
+        color: rgb(255, 230, 0);
+        font-family: var(--fontirs);
+        font-size: 16px;
+        width: 50px;
+
     }
 
     .tech-brain-logo {
-        width: 50px;
+        width: 56px;
 
     }
 
@@ -92,11 +107,16 @@ body {
         font-family: var(--fontirs);
     }
 
-    .start,.code,.codehtml {
+    .start,
+    .code,
+    .codehtml {
         display: flex;
         justify-content: center;
     }
-    #btn2,#btn3,#btn4{
+
+    #btn2,
+    #btn3,
+    #btn4 {
         border: none;
         outline: none;
         stroke: none;
@@ -112,18 +132,27 @@ body {
         cursor: pointer;
         /* transition: all 2s; */
     }
-    #buyfa{
+
+    #buyfa {
         display: flex;
         justify-content: center;
     }
-    #buyfa p{
+
+    #buyfa p {
         color: black;
         font-family: var(--fontirs);
         font-size: 40px;
     }
-    
-    }
-    /* #btn1 ,#btn2 ,#btn3 ,#btn4:hover{
+
+}
+#main{
+    margin-left: 0px;
+    margin-top: -68px;
+}
+#mySidenav{
+    font-family: var(--fontlale);
+}
+/* #btn1 ,#btn2 ,#btn3 ,#btn4:hover{
         opacity: 0.5;
         transform: scale(1.2);
     } */
@@ -137,8 +166,62 @@ body {
         background-color: blueviolet;
     }
 }
-@keyframes buttoncolor{
-    from {background-color: blueviolet;}
-    50%{background-color: aqua;color: black;}
-    100%{background-color: blueviolet; color: white;}
+
+@keyframes buttoncolor {
+    from {
+        background-color: blueviolet;
+    }
+
+    50% {
+        background-color: aqua;
+        color: black;
+    }
+
+    100% {
+        background-color: blueviolet;
+        color: white;
+    }
 }
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #ffdd57;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #000000;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
