--- a/home.css
+++ b/home.css
@@ -1,6 +1,7 @@
 :root {
     --colororg: rgb(250, 250, 250);
     --color1: #04AA6D;
+    --color2 : #fedc58;
     --fontirs: irs;
     --fontbahaman: bahman;
     --fontlale: lale;
@@ -43,6 +44,32 @@ body {
         padding: 0;
         /* /* height: 50px; */
     }
+    #letusgo,.namacode-responsive,.sayplus,.starth-c{
+        display: none;
+    }
+.namacode{
+    display: flex;
+    justify-content: center;
+    margin-top: 48px;
+    flex-direction: column;
+}
+    .namacode h1 {
+        text-align: center;
+        font-family: var(--fontirs);
+        font-size: x-large;
+        color: #000000 !important;
+    }
+    #starting h1 {
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .saysmt p {
+        color: black;
+        text-align: center;
+        font-size: 25px;
+        font-family: var(--fontirs);
+    }
 
     #headlogo p {
         color: rgb(255, 230, 0);
@@ -51,7 +78,23 @@ body {
         width: 50px;
 
     }
-
+.startnow{
+    display: flex;
+    justify-content: center;
+    margin-top: 36px;
+}
+.start-btn{
+    background-color: var(--color2);
+    color: rgb(0, 0, 0);
+    border: none;
+    stroke: none;
+    outline: none;
+    padding: 10px 20px;
+    font-family: var(--fontirs);
+}
+.start-btn::before{
+    content: "  \2190";
+}
     .tech-brain-logo {
         width: 56px;
 
@@ -145,13 +188,26 @@ body {
     }
 
 }
-#main{
+
+#main {
     margin-left: 0px;
     margin-top: -68px;
 }
-#mySidenav{
+
+#mySidenav {
     font-family: var(--fontlale);
 }
+
+@media (min-width:350px) {
+    #ui {
+        display: none;
+    }
+
+    li {
+        display: none;
+    }
+}
+
 /* #btn1 ,#btn2 ,#btn3 ,#btn4:hover{
         opacity: 0.5;
         transform: scale(1.2);
@@ -182,6 +238,7 @@ body {
         color: white;
     }
 }
+
 .sidenav {
     height: 100%;
     width: 0;
@@ -193,35 +250,198 @@ body {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-  }
-  
-  .sidenav a {
+}
+
+.sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #000000;
     display: block;
     transition: 0.3s;
-  }
-  
-  .sidenav a:hover {
+}
+
+.sidenav a:hover {
     color: #f1f1f1;
-  }
-  
-  .sidenav .closebtn {
+}
+
+.sidenav .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
-  }
-  
-  #main {
+}
+
+#main {
     transition: margin-left .5s;
     padding: 16px;
-  }
-  
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+    .sidenav a {
+        font-size: 18px;
+    }
+
+}
+
+/* add  */
+
+@media (min-width:400px) {
+    #headlogo {
+        display: flex;
+        justify-content: flex-end;
+        margin-left: 1065px;
+    }
+    #letusgo,.namacode-responsive,.sayplus,.starth-c{
+        display: block;
+    }
+    .sayplus{
+        display: flex;
+        justify-content: center;
+    }
+    .sayplus p{
+        text-align: center;
+        color: black;
+        font-family: var(--fontirs);
+        font-size: calc(30px - 5px);
+    }
+    #headlogo:hover {
+        cursor: pointer;
+    }
+.namacode-responsive{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.namacode-responsive h2{
+    text-align: center;
+    font-family: var(--fontirs);
+    font-size: 30px;
+}
+.h-change::before{
+    content: " \2193 ";
+}
+.nama-res{
+    outline: black;
+}
+    #mySidenav,
+    #main {
+        display: none;
+    }
+
+    #ui {
+        /* display: flex; */
+        display: block;
+        justify-content: flex-end;
+        margin-top: -58px;
+        margin-right: 306px;
+    }
+
+    #starting {
+        display: none;
+    }
+
+    .saysmt,
+    .namacode,.startnow,.start-btn {
+        display: none;
+    }
+
+    .ls-btn {
+        background-color: var(--color1);
+        color: white;
+        font-family: var(--fontlale);
+        border: none;
+        stroke: none;
+        outline: none;
+        padding: 13px 25px;
+        border-radius: 10px;
+        margin-top: 6px;
+        margin-left: 190px;
+        transition: transform 2s;
+    }
+
+    .ls-btn:hover {
+        transform: scale(1.2);
+        cursor: pointer;
+        box-shadow: 5px 4px 6px gray;
+    }
+
+    .ls-btn:active {
+        transform: translateY(4px);
+    }
+    #letusgo{
+     display: flex;
+     justify-content: center;
+    }
+    #letusgo h1{
+        text-align: center;
+        font-family: var(--fontirs);
+    }
+    .starth-c{
+        display: flex;
+        justify-content: center;
+    }
+    
+    .s-h-c{
+        margin-top: 31px;
+        border: none;
+        stroke: none;
+        outline: none;
+        background-color: var(--color2);
+        padding: 10px 20px;
+        margin-top: 31px;
+        width: 213px;
+        height: 52px;
+        font-family: var(--fontlale);
+        transition: transform 2s , box-shadow 2s;
+    }
+    .s-h-c::before{
+        content: "\2190";
+    }
+    .s-h-c:hover{
+        cursor: pointer;
+        transform: scale(1.2);
+        box-shadow: 5px 4px 6px gray;
+    }
+}
+
+ul {
+    display: block;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: transparent;
+    z-index: 9999;
+    /* position: fixed; */
+}
+
+li {
+    display: block;
+    float: right;
+    font-family: var(--fontlale);
+}
+
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+    font-family: var(--fontlale);
+    font-size: 20px;
+    display: block;
+    transition: 1.2s;
+}
+
+li a:hover {
+    /* background-color: gray; */
+    opacity: 0.5;
+    border-radius: 10px;
+    transform: scale(1.2);
+}
